syntax = "proto3";
package GameProtobufs;

import "transform.proto";

enum ShipType {
	capital = 0;
	fighter = 1;
	engineer = 2;
}

message ShipMessage {
	string id = 1;
	TransformMessage transform = 2;
	string ownerGuid = 3;
	string model = 4;
}

message StateMessage {
	repeated ShipMessage ships = 1;
}
